corrige un problème dans les tests de Product