@@ -2,17 +2,21 @@ package com.example.demo.service;
 
 import com.example.demo.dto.ProductDTO;
 import com.example.demo.entity.Product;
+import com.example.demo.repository.InventoryRepository;
 import com.example.demo.repository.ProductRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -21,31 +25,37 @@ class ProductServiceImpTest {
     @Mock
     private ProductRepository productRepository;
 
+    @Mock
+    private InventoryRepository inventoryRepository;
+
     @InjectMocks
     private ProductServiceImp productService;
 
     private Product product;
     private ProductDTO productDTO;
+    private UUID productId;
 
     @BeforeEach
     void setUp() {
-
-        UUID id = UUID.randomUUID();
+        productId = UUID.fromString("8945a242-f888-4814-bde4-6125127a65d1");
 
         product = Product.builder()
-                .id(id)
+                .id(productId)
                 .name("Laptop Dell")
                 .description("High performance laptop")
                 .sku("SKU123")
-                .price(new BigDecimal("1200.6"))
+                .price(new BigDecimal("1200.00"))
+                .inventories(new ArrayList<>())
+                .purchaseOrderLines(new ArrayList<>())
+                .salesOrderLines(new ArrayList<>())
                 .build();
 
         productDTO = ProductDTO.builder()
-                .id(id)
+                .id(productId)
                 .name("Laptop Dell")
                 .description("High performance laptop")
                 .sku("SKU123")
-                .price(new BigDecimal("1200.0"))
+                .price(new BigDecimal("1200.00"))
                 .build();
     }
 
@@ -59,6 +69,9 @@ class ProductServiceImpTest {
         assertNotNull(result);
         assertEquals("Laptop Dell", result.getName());
         assertEquals("SKU123", result.getSku());
+        assertEquals(productId, result.getId());
+        assertEquals(new BigDecimal("1200.00"), result.getPrice());
+
         verify(productRepository, times(1)).save(any(Product.class));
         verify(productRepository, times(1)).existsBySku("SKU123");
     }
@@ -70,20 +83,22 @@ class ProductServiceImpTest {
         RuntimeException exception = assertThrows(RuntimeException.class,
                 () -> productService.createProduct(productDTO));
 
-        assertTrue(exception.getMessage().contains("SKU"));
+        assertEquals("Un produit avec ce SKU existe déjà: SKU123", exception.getMessage());
         verify(productRepository, never()).save(any(Product.class));
+        verify(productRepository, times(1)).existsBySku("SKU123");
     }
 
     @Test
     void testGetProductById_Success() {
-        when(productRepository.findById(product.getId())).thenReturn(Optional.of(product));
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
 
-        ProductDTO result = productService.getProductById(product.getId());
+        ProductDTO result = productService.getProductById(productId);
 
         assertNotNull(result);
         assertEquals("Laptop Dell", result.getName());
         assertEquals("SKU123", result.getSku());
-        verify(productRepository, times(1)).findById(product.getId());
+        assertEquals(productId, result.getId());
+        verify(productRepository, times(1)).findById(productId);
     }
 
     @Test
@@ -94,19 +109,31 @@ class ProductServiceImpTest {
         RuntimeException exception = assertThrows(RuntimeException.class,
                 () -> productService.getProductById(randomId));
 
-        assertTrue(exception.getMessage().contains("non trouvé"));
+        assertEquals("Produit non trouvé avec l'id: " + randomId, exception.getMessage());
         verify(productRepository, times(1)).findById(randomId);
     }
 
     @Test
     void testGetAllProducts() {
-        when(productRepository.findAll()).thenReturn(List.of(product));
+        when(productRepository.findAll()).thenReturn(Arrays.asList(product));
 
         List<ProductDTO> result = productService.getAllProducts();
 
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals("Laptop Dell", result.get(0).getName());
+        assertEquals("SKU123", result.get(0).getSku());
+        verify(productRepository, times(1)).findAll();
+    }
+
+    @Test
+    void testGetAllProducts_EmptyList() {
+        when(productRepository.findAll()).thenReturn(Collections.emptyList());
+
+        List<ProductDTO> result = productService.getAllProducts();
+
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
         verify(productRepository, times(1)).findAll();
     }
 
@@ -119,6 +146,7 @@ class ProductServiceImpTest {
         assertNotNull(result);
         assertEquals("Laptop Dell", result.getName());
         assertEquals("SKU123", result.getSku());
+        assertEquals(productId, result.getId());
         verify(productRepository, times(1)).findBySku("SKU123");
     }
 
@@ -129,7 +157,109 @@ class ProductServiceImpTest {
         RuntimeException exception = assertThrows(RuntimeException.class,
                 () -> productService.getProductBySku("UNKNOWN"));
 
-        assertTrue(exception.getMessage().contains("non trouvé"));
+        assertEquals("Produit non trouvé avec le SKU: UNKNOWN", exception.getMessage());
         verify(productRepository, times(1)).findBySku("UNKNOWN");
+    }
+
+    @Test
+    void testUpdateProduct_Success() {
+        ProductDTO updatedDTO = ProductDTO.builder()
+                .id(productId)
+                .name("Laptop Dell Updated")
+                .description("Updated description")
+                .sku("SKU123")
+                .price(new BigDecimal("1300.00"))
+                .build();
+
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+        when(productRepository.save(any(Product.class))).thenReturn(product);
+
+        ProductDTO result = productService.updateProduct(productId, updatedDTO);
+
+        assertNotNull(result);
+        verify(productRepository, times(1)).findById(productId);
+        verify(productRepository, never()).existsBySku(anyString());
+        verify(productRepository, times(1)).save(any(Product.class));
+    }
+
+    @Test
+    void testUpdateProduct_WithDifferentSku_Success() {
+        ProductDTO updatedDTO = ProductDTO.builder()
+                .id(productId)
+                .name("Laptop Dell Updated")
+                .description("Updated description")
+                .sku("NEW_SKU")
+                .price(new BigDecimal("1300.00"))
+                .build();
+
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+        when(productRepository.existsBySku("NEW_SKU")).thenReturn(false);
+        when(productRepository.save(any(Product.class))).thenReturn(product);
+
+        ProductDTO result = productService.updateProduct(productId, updatedDTO);
+
+        assertNotNull(result);
+        verify(productRepository, times(1)).findById(productId);
+        verify(productRepository, times(1)).existsBySku("NEW_SKU");
+        verify(productRepository, times(1)).save(any(Product.class));
+    }
+
+    @Test
+    void testUpdateProduct_NotFound() {
+        UUID randomId = UUID.randomUUID();
+        when(productRepository.findById(randomId)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> productService.updateProduct(randomId, productDTO));
+
+        assertEquals("Produit non trouvé avec l'id: " + randomId, exception.getMessage());
+        verify(productRepository, times(1)).findById(randomId);
+        verify(productRepository, never()).existsBySku(anyString());
+        verify(productRepository, never()).save(any(Product.class));
+    }
+
+    @Test
+    void testUpdateProduct_DuplicateSku() {
+        ProductDTO updatedDTO = ProductDTO.builder()
+                .id(productId)
+                .name("Laptop Dell Updated")
+                .description("Updated description")
+                .sku("NEW_SKU")
+                .price(new BigDecimal("1300.00"))
+                .build();
+
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+        when(productRepository.existsBySku("NEW_SKU")).thenReturn(true);
+
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> productService.updateProduct(productId, updatedDTO));
+
+        assertEquals("Un autre produit avec ce SKU existe déjà: NEW_SKU", exception.getMessage());
+        verify(productRepository, times(1)).findById(productId);
+        verify(productRepository, times(1)).existsBySku("NEW_SKU");
+        verify(productRepository, never()).save(any(Product.class));
+    }
+
+    @Test
+    void testDeleteProduct_Success() {
+        when(productRepository.findById(productId)).thenReturn(Optional.of(product));
+
+        productService.deleteProduct(productId);
+
+        verify(productRepository, times(1)).findById(productId);
+        verify(productRepository, times(1)).delete(product);
+    }
+
+    @Test
+    void testDeleteProduct_NotFound() {
+        UUID randomId = UUID.randomUUID();
+        when(productRepository.findById(randomId)).thenReturn(Optional.empty());
+
+        RuntimeException exception = assertThrows(RuntimeException.class,
+                () -> productService.deleteProduct(randomId));
+
+        assertEquals("Produit non trouvé avec l'id: " + randomId, exception.getMessage());
+        verify(productRepository, times(1)).findById(randomId);
+        verify(productRepository, never()).delete(any(Product.class));
     }
 }
